fixed overflow in smaller screens

--- a/css/favorite.css
+++ b/css/favorite.css
@@ -1,21 +1,22 @@
-* {
-  margin: 0;
+
+*,*::after,*::before{
+   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+html,
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
-  margin: 0;
-  padding: 0;
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: clamp(12px, 2vw, 16px);
   background-color: #efefef;
   overflow-x: hidden;
   z-index: 1000;
+
 }
 /*=============HEADER=============*/
 
